# realworld-fastapi-ddd

./: .commit-template  .dockerignore  .env  .env.example  .env.prod  .env.prod.example  .env.test.example  .gitignore  COMMIT_GUIDELINES.md  Dockerfile  ERROR_CODE_GUIDELINES.md  EXCEPTION_HANDLING.md  Makefile  README.md  TRANSACTION_DECORATOR_GUIDELINES.md  TRANSACTION_MANAGEMENT.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  wait-for-it.sh
.claude/: CLAUDE.md
.github/: copilot-instructions.md
alembic/: README  env.py
alembic/versions/: 20250622_add_article_fav.py  20250622_add_articles_table.py  20250622_add_followers_table.py  20250622_add_users_table.py  20250624_add_comments_table.py
app/: main.py
app/api/: articles.py  healthcheck.py  profiles.py  tags.py  users.py
app/config/: settings.py
app/events/: __init__.py  core.py
app/shared/: __init__.py  event_registry.py  exceptions.py  jwt.py  pagination.py  transaction.py
diagrams/: ADR-001-diagram-formats.md  Makefile  README.md  code-integration-examples.md
diagrams/architecture/: c4-component.puml  c4-container.puml  c4-context.puml
diagrams/domain/: database-schema.puml  domain-model.puml
diagrams/flow/: authentication-flow.puml  data-flow.puml  event-flow.puml  request-flow-sequence.puml
diagrams/testing/: testing-architecture.puml
docs/: PROJECT_OVERVIEW.md  README.md
docs/architecture/: DOMAIN_DRIVEN_DESIGN.md  EVENT_DRIVEN_ARCHITECTURE.md  EXCEPTION_HANDLING.md  TRANSACTION_MANAGEMENT.md
docs/deployment/: PRODUCTION.md
docs/development/: COMMIT_GUIDELINES.md  DEVELOPMENT_WORKFLOW.md
docs/guides/: API_USAGE.md  DEVELOPMENT_QUICKSTART.md  ERROR_CODE_GUIDELINES.md  GETTING_STARTED.md  TESTING.md  TRANSACTION_DECORATOR_GUIDELINES.md
scripts/: commit_helper.py  db_manager.py  improve_commits.py
tests/: conftest.py  db_utils.py  factories.py  factory_base.py  helpers.py  test_event_bus.py  test_improved_fixtures.py
tests/e2e/: test_comments_flow.py  test_profiles_follow.py  test_tags_flow.py  test_users_flow.py
tests/integration/: test_articles.py  test_articles_favorite.py  test_articles_feed.py  test_comments.py  test_enhanced_transaction_management.py  test_healthcheck.py  test_tags.py  test_users.py  test_users_async.py
tests/unit/: test_additional_events.py  test_api_profiles.py  test_api_users.py  test_authentication_services.py  test_comments_service.py  test_enhanced_event_system.py  test_event_system.py  test_exception_handling.py  test_jwt.py  test_main.py  test_repository_followers.py  test_repository_users.py  test_schemas.py  (+6 more)
(+68 files in other folders)
