[tool.poetry]
name = "fastapi-realworld-demo"
version = "0.1.0"
description = "A minimal FastAPI project."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
